<resources>
    <string name="app_name">HRIS mobile</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_vacation">Vacation Leave</string>
    <string name="menu_sick">Sick Leave</string>
    <string name="menu_profile">My Profile</string>
    <string name="overtime">Overtime</string>
    <string name="offset">Offset</string>
    <string name="reminders">Reminders</string>

    <string-array name="medForm">
        <item>Yes</item>
        <item>No</item>
        <item>Attach a Form</item>
    </string-array>

</resources>