<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/menu_profile"
            />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/notifications"
            android:title="@string/reminders"
            />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar_icon"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/team_icon"
            android:title="@string/menu_teams" />
        <item
            android:id="@+id/nav_vacation"
            android:icon="@drawable/vacation_icon"
            android:title="@string/menu_vacation"
            />
        <item
            android:id="@+id/nav_sick"
            android:icon="@drawable/sick_icon"
            android:title="@string/menu_sick"
            />
        <item
            android:id="@+id/nav_overtime"
            android:icon="@drawable/overtime_clear_icon"
            android:title="@string/overtime"
            />
        <item
            android:id="@+id/nav_offset"
            android:icon="@drawable/offset_icon"
            android:title="@string/offset"
            />
    </group>
</menu>