<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hris.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.hris.ui.profile.ProfileFragment"
        android:label="User Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.hris.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_teams"
        android:name="com.example.hris.ui.teams.TeamsFragment"
        android:label="@string/menu_teams"
        tools:layout="@layout/fragment_teams" />

    <fragment
        android:id="@+id/nav_vacation"
        android:name="com.example.hris.ui.vacation.VacationFragment"
        android:label="@string/menu_vacation"
        tools:layout="@layout/fragment_vacation" />

    <fragment
        android:id="@+id/nav_sick"
        android:name="com.example.hris.ui.sick.SickFragment"
        android:label="@string/menu_sick"
        tools:layout="@layout/fragment_sick" />

</navigation>